Fix image dimensions for images in Tips & Resources to avoid overspill

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -714,7 +714,7 @@ footer a {
     }
 
     #weather-images img {
-        min-width: fit-content;
+        min-width: 150px;
         margin: 0.5rem;
     }
 
